extension/css/style.css
/****************/
/*   Elements   */
/****************/

body,html {
  height: 100%;
  padding: 0;
  margin: 0;
}

body {
  background-color: #F5F5F5;
  color: #424242;
  -webkit-align-items: center;
  -webkit-font-smoothing: antialiased;
  -webkit-justify-content: center;
  -webkit-user-select: none;
}

body, input {
  display: -webkit-flex;
  font-family: 'Avenir', 'NUNITO', 'Museo Sans', 'Muli', 'helvetica neue', helvetica, arial, sans-serif;
}

a, button {
outline: none;
}

input[type=checkbox] {
    display: none;
}

input[type=checkbox]:checked + label:before {
    content: "\2713";
    text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
    color: #000000;
    text-align: center;
    line-height: 1.5vw;
}

button {
  font-size: 1.5vw;
  appearance: none;
  -webkit-appearance: none;
}

label {
  font-size: 1vw;
  cursor: pointer;
  position: relative;
}

ul {
  list-style-position: inside;
  font-size:0.8vw;
  margin-top: 0.2vw;
  width:25vw;
  padding-left: 1vw;
}

/*******************/
/*  Timer Classes  */
/*******************/

.timer-container {
  position: absolute;
  left: 50%;
  top: 42%;
}

.timer, .clock {
  -webkit-user-select: none;
  position: relative;
  left:-50%;
  margin-bottom: .4vw;
  font-size: 6vw;
  font-weight: 400;
  line-height: 1;
  cursor: default;
  white-space: nowrap;
}

.clock {
  margin-top:-.5vw;
  font-size: 8vw;
}

.timer-label {
  -webkit-user-select: none;
  text-align: center;
  flex-basis: 20px;
  flex-grow: 1;
}

.timer-labels {
  -webkit-user-select: none;
  display:flex;
  position: relative;
  margin: 0;
  left:-50%;
  margin-left:-1vw;
  margin-right:.5vw;
  font-size: 1.5vw;
  font-weight: 400;
  line-height: 1;
  cursor: default;
}

#white-timer-age, #white-timer-clock {
  text-shadow: -3px 0 white, 0 3px white, 3px 0 white, 0 -3px white;
}

#black-timer-age, #black-timer-clock {
  text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
}

#white-timer-labels {
  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

#black-timer-labels {
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

/*******************/
/*  Life Chapters  */
/*******************/

.pie {
  float: left;
  width: 1.9%;
  margin: 0.16%;
}

.circle {
  float: left;

  width: 1.9%;
  box-sizing: border-box;
  margin: 0.16%;
  border: solid transparent;
  border-radius: 50%;

  background-color: #424242;
}

/*******************/
/* Updates Button  */
/*******************/

#update-bubble
{
  display: none;
  position: absolute;
  bottom: 50px;
  left: 10px;
  width: 230px;
  height: 56px;
  padding: 0;
  background: #FFFFFF;
  -webkit-border-radius: 9px;
  -moz-border-radius: 9px;
  border-radius: 9px;
  border: #000000 solid 2px;
}

#update-bubble:after
{
  content: '';
  position: absolute;
  border-style: solid;
  border-width: 12px 9px 0;
  border-color: #FFFFFF transparent;
  display: block;
  width: 0;
  z-index: 1;
  bottom: -12px;
  left: 11px;
}

#update-bubble:before
{
  content: '';
  position: absolute;
  border-style: solid;
  border-width: 13px 10px 0;
  border-color: #000000 transparent;
  display: block;
  width: 0;
  z-index: 0;
  bottom: -15px;
  left: 10px;
}

#update-bubble-text {
  -webkit-user-select: none;
  font-size: 1rem;
  line-height: 1;
  padding-top:10px;
  padding-left:10px;
  padding-bottom: 10px;
  color: #000000;
  cursor:default;
}

#info-button {
  position: fixed;
  left: 15px;
  bottom: 7px;
  cursor: pointer;
}

